--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,7 @@ body {
   margin: 0;
   box-sizing: border-box;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: #fff;
 }
 
 .main {
@@ -11,7 +12,13 @@ body {
   flex-direction: column;
   min-height: 100vh;
   justify-content: space-between;
-  background-color: #335496;
+  background-color: #163a7c;
+}
+
+.header {
+  position: sticky;
+  top: 0;
+  z-index: 3;
 }
 
 .navbar {
@@ -39,10 +46,11 @@ body {
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  background-color: #335496;
   width: 100%;
-  color: rgb(170, 162, 166);
+  color: rgb(216, 202, 209);
   margin-top: 50px;
+  font-size: larger;
+  margin-bottom: 150px;
 }
 
 .home-heading {
@@ -55,7 +63,11 @@ body {
 }
 
 .h-heading {
+  box-sizing: border-box;
   text-decoration: underline;
+  padding-bottom: 10px;
+  font-size: 1rem;
+  width: 100%;
 }
 
 .home-container {
@@ -68,6 +80,14 @@ body {
   text-decoration: none;
 }
 
+.sticky-inputs {
+  display: flex;
+  flex-direction: column;
+  position: sticky;
+  top: 40px;
+  z-index: 2;
+}
+
 .search-container {
   display: flex;
   align-items: center;
@@ -75,22 +95,24 @@ body {
   padding-left: 3px;
   width: 100%;
   margin: 0;
-  background-color: rgb(21, 142, 172);
+  background-color: #0f347e;
 }
 
 .search-down {
   display: flex;
-  border-bottom: 5px solid #fff;
   margin: 0;
+}
+
+::-webkit-calendar-picker-indicator {
+  filter: invert(1);
 }
 
 .search-field {
   background-color: transparent;
   color: white;
   border: none;
-  border-left: 1px solid #fff;
   height: 30px;
-  padding-left: 10px;
+  padding: 0 10px;
   font-size: 1rem;
 }
 
@@ -132,6 +154,49 @@ body {
   color: #fff;
 }
 
+.globe-icon-container {
+  box-sizing: border-box;
+  width: 50%;
+  height: 50vw;
+  padding: 10px;
+  color: #fff;
+  background-color: #4164a6;
+  font-size: 10rem;
+}
+
+.world-wide {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  box-sizing: border-box;
+  width: 50%;
+  height: 50vw;
+  padding: 10px;
+  color: #fff;
+  background-color: #4164a6;
+  font-size: 1.5rem;
+}
+
+/* .world-wide > * {
+  word-break: break-all;
+} */
+
+.flag {
+  width: 60px;
+  height: 60px;
+  position: relative;
+  left: calc(-150%);
+  top: 0;
+  border-radius: 100%;
+  opacity: 0.7;
+}
+
+.country-image {
+  width: 100%;
+  height: 100%;
+  border-radius: 100%;
+}
+
 .arrow {
   display: inline-block;
   border: 0.5px solid #fff;
@@ -141,6 +206,10 @@ body {
   text-align: center;
   line-height: 15px;
   border-radius: 100%;
+}
+
+.home-country-card .arrow {
+  position: absolute;
 }
 
 .fa-arrow {
@@ -166,12 +235,98 @@ body {
 .country-header {
   color: #fff;
   text-align: center;
+  padding: 10px 0;
+  margin: 0;
+  background-color: #4164a6;
 }
 
 .counry-page-name {
   color: #fff;
   text-align: center;
   font-size: 2rem;
+}
+
+.break-down {
+  background-color: #143d88;
+  display: block;
+  text-align: center;
+  padding: 10px 0;
+}
+
+.country-table {
+  color: white;
+  margin: 0;
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.country-table .table-row {
+  padding: 0 5px;
+  border: none;
+  height: 50px;
+}
+
+.country-table .table-row td {
+  padding: 0 5px;
+  border: none;
+}
+
+.country-table .table-row td:nth-child(2) {
+  text-align: right;
+}
+
+.coutry-tbody tr:nth-child(odd) {
+  background-color: #335496;
+}
+
+.coutry-tbody tr:nth-child(even) {
+  background-color: #4164a6;
+}
+
+.region-data-container-link {
+  text-decoration: none;
+  color: #fff;
+}
+
+.world-wide-country {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.region-data-container {
+  display: flex;
+  justify-content: space-between;
+  padding: 1vw 3vw;
+}
+
+.not-available {
+  height: 40px;
+  text-align: center;
+  line-height: 40px;
+}
+
+.regions-container a:nth-child(odd) > div {
+  background-color: #335496;
+}
+
+.regions-container a:nth-child(even) > div {
+  background-color: #4164a6;
+}
+
+.inner-region-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
+}
+
+.source {
+  position: relative;
+  bottom: -0;
+  padding: 1vw 2vw;
+  text-align: center;
+  margin: auto;
 }
 
 .footer {
