--- a/src/styles.css
+++ b/src/styles.css
@@ -42,6 +42,10 @@ body {
   font-weight: bolder;
 }
 
+.middle {
+  font-size: 1.2rem;
+}
+
 .globe {
   width: 100%;
   height: 100%;
@@ -89,9 +93,10 @@ body {
   display: flex;
   flex-direction: column;
   position: sticky;
-  width: 100%;
+  width: 99.7%;
   top: 40px;
   z-index: 2;
+  margin: 0;
 }
 
 .search-container {
@@ -267,13 +272,13 @@ body {
 }
 
 .country-table .table-row {
-  padding: 0 5px;
+  padding: 0 3vw;
   border: none;
   height: 50px;
 }
 
 .country-table .table-row td {
-  padding: 0 5px;
+  padding: 0 3vw;
   border: none;
 }
 
@@ -353,7 +358,65 @@ body {
 }
 
 @media screen and (min-width: 755px) {
-  body {
-    color: red;
+  .navbar {
+    padding: 0 20vw;
+  }
+
+  .middle {
+    font-size: 2rem;
+  }
+
+  .flag {
+    width: 10vw;
+    height: 10vw;
+    left: -15vw;
+  }
+
+  .name-cases,
+  .world-wide {
+    font-size: 2vw;
+  }
+
+  #country-search {
+    border: 1px solid rgb(28, 129, 175);
+    margin-left: 5px;
+  }
+
+  .search-text {
+    text-align: right;
+  }
+
+  .search-field {
+    max-width: 200px;
+  }
+
+  .search-container {
+    display: block;
+    text-align: center;
+  }
+
+  .search-container > * {
+    max-width: 200px;
+  }
+
+  .home-container,
+  .country-container,
+  .region-container,
+  .sub-region-container {
+    padding: 0 20vw;
+  }
+
+  .home-container .home-country-card {
+    height: 20vw;
+  }
+
+  .globe-icon-container,
+  .world-wide {
+    height: 30vw;
+  }
+
+  .not-available,
+  .source {
+    background-color: #345085;
   }
 }
